<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.chrisrichardson</groupId>
	<artifactId>survey</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>survey</name>
	<url>https://github.com/cer/votemeeteat</url>

	<modules>
	    <module>survey-management</module>
	    <module>survey-user-management</module>
	    <module>vme-management</module>
  	    <module>twilio-service</module>
  	    <module>factual-service</module>
  	    <module>vme-common</module>
        <module>vme-test-common</module>
        <module>webtestutil</module>
        <module>twilio-simulator</module>
        <module>testutils</module>
        <module>end-to-end-tests</module>
    <module>utils</module>
  </modules>

	<repositories>
		<repository>
			<id>pia-repository</id>
			<url>http://www.pojosinaction.com/repository</url>
		</repository>
		<repository>
			<id>openqa</id>
			<url>http://nexus.openqa.org/content/repositories/releases/</url>
		</repository>
	</repositories>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.framework.version>3.1.2.RELEASE</spring.framework.version>
		<org.springframework.integration-version>2.1.3.RELEASE</org.springframework.integration-version>
		<org.springframework.amqp-version>1.0.0.RELEASE</org.springframework.amqp-version>
        <slf4j.version>1.6.1</slf4j.version>
        <org.cloudfoundry-group>org.cloudfoundry</org.cloudfoundry-group>
        <org.cloudfoundry-version>0.8.1</org.cloudfoundry-version>
    </properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptor>src/main/assembly/dep.xml</descriptor>
					<includeSite>false</includeSite>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<configuration>
						<downloadSources>true</downloadSources>
						<ajdtVersion>none</ajdtVersion>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.6</source>
						<target>1.6</target>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.13</version>
                    <configuration>
                        <argLine>-XX:MaxPermSize=256M</argLine>
                    </configuration>
				</plugin>
			</plugins>

		</pluginManagement>
	</build>

	<dependencyManagement>
		<dependencies>
            <dependency>
                <groupId>commons-httpclient</groupId>
                <artifactId>commons-httpclient</artifactId>
                <version>3.1</version>
            </dependency>
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>1.6.2</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-library</artifactId>
                <version>2.9.1</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.jackson</groupId>
                <artifactId>jackson-mapper-asl</artifactId>
                <version>1.9.1</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml</groupId>
                <artifactId>jackson-module-scala</artifactId>
                <version>1.9.1</version>
            </dependency>
            <dependency>
                <groupId>commons-collections</groupId>
                <artifactId>commons-collections</artifactId>
                <version>3.1</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.4</version>
            </dependency>
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging-api</artifactId>
                <version>1.1</version>
            </dependency>
            <dependency>
                <groupId>cglib</groupId>
                <artifactId>cglib-nodep</artifactId>
                <version>2.1_3</version>
            </dependency>
            <dependency>
                <groupId>com.netflix.hystrix</groupId>
                <artifactId>hystrix-core</artifactId>
                <version>1.2.2</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.1</version>
            </dependency>
            <dependency>
                <groupId>commons-lang</groupId>
                <artifactId>commons-lang</artifactId>
                <version>2.4</version>
            </dependency>
            <dependency>
                <groupId>${org.cloudfoundry-group}</groupId>
                <artifactId>cloudfoundry-runtime</artifactId>
                <version>${org.cloudfoundry-version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-mongodb</artifactId>
                <version>1.0.0.RELEASE</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-commons-core</artifactId>
                <version>1.2.0.RELEASE</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <!-- Need this newer version of commons codec-->
                <version>1.6</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>1.2.12</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.8.1</version>
            </dependency>
			<dependency>
				<groupId>org.springframework.integration</groupId>
				<artifactId>spring-integration-amqp</artifactId>
				<version>${org.springframework.integration-version}</version>
			</dependency>
			<dependency>
	  			<groupId>org.springframework.amqp</groupId>
	  			<artifactId>spring-rabbit</artifactId>
	  			<version>${org.springframework.amqp-version}</version>
			</dependency>
			<dependency>
				<groupId>aspectj</groupId>
				<artifactId>aspectjlib</artifactId>
				<version>1.5.3</version>
			</dependency>
			<dependency>
				<groupId>aspectj</groupId>
				<artifactId>aspectjrt</artifactId>
				<version>1.5.3</version>
			</dependency>
			<dependency>
				<groupId>aspectj</groupId>
				<artifactId>aspectjweaver</artifactId>
				<version>1.5.3</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-orm</artifactId>
				<version>${spring.framework.version}</version>
			</dependency>


			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.framework.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aop</artifactId>
				<version>${spring.framework.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${spring.framework.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.framework.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${spring.framework.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring.framework.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring.framework.version}</version>
				<scope>test</scope>
			</dependency>


		</dependencies>

	</dependencyManagement>

</project>